--- a/templates/index.html
+++ b/templates/index.html
@@ -137,6 +137,13 @@
             id="js-date">
         </div>
 
+        <div class="decl-form__rule">
+          <label for="receipt" class="decl-form__question">Heb je een scan van de BTW-bon?</label>
+          <input name="receipt" type="file" class="decl-form__answer"
+            id="js-receipt">
+            <p class="decl-form__comment"><strong>Psst...</strong> Zorg je ervoor dat het bonnetje goed leesbaar is en de BTW informatie bevat? (PIN bonnetjes mag je lekker zelf houden!) Oh, en je mag jpg’s, pdf’s, png’s en gif’s uploaden.</p>
+        </div>
+
 
 
         <h2>Oh en over jou...</h2>
