add notice for receipt number

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
         <h2>Hey! Over die aankoop hè...</h2>
 
         <div class="decl-form__rule">
-          <label for="purchase" class="decl-form__question">Wat heb je gekocht?</label>
+          <label for="purchase" class="decl-form__question">Wat heb je gekocht?<br>(+ commissiebonnummer)</label>
           <input name="purchase" type="text" class="decl-form__answer"
             placeholder="Bakje schroeven/heel veel frisdrank/tapijt">
         </div>
