--- a/frontend/src/sass/styles.scss
+++ b/frontend/src/sass/styles.scss
@@ -43,11 +43,26 @@ body {
 
 h1,
 h2 {
-  text-align: center;
   font-family: $font;
   font-weight: 800;
   max-width: 90%;
-  margin: 1.5em auto .5em;
+}
+
+h1 {
+  text-align: center;
+  font-size: 2.5em;
+  margin: .5em auto;
+
+  @media (min-width: 768px) {
+    font-size: 6vw;
+    margin-top: 0;
+  }
+}
+
+h2 {
+  margin: 2em auto 1em;
+  text-align: center;
+  font-size: 1.8em;
 }
 
 
