send declaration to committtee email, too

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,31 +60,29 @@
             placeholder="Spend ID"
             list="committees">
             <datalist id="committees">
-              <option value="Actid">Actid</option>
+              <option value="ActID">ActID</option>
               <option value="Cases on Tour 1">Cases on Tour 1</option>
               <option value="Cases on Tour 2">Cases on Tour 2</option>
               <option value="Eerstejaarscommissie">Eerstejaarscommissie</option>
               <option value="Eerstejaarsweekend">Eerstejaarsweekend</option>
-              <option value="Exid X">Exid X</option>
-              <option value="Exid Y">Exid Y</option>
-              <option value="Flightcase">Flightcase</option>
+              <option value="ExID">ExID</option>
+              <option value="Flight Case">Flight Case</option>
               <option value="Foto">Foto</option>
-              <option value="i.d-Algemeen">i.d-Algemeen</option>
-              <option value="i.d-Education">i.d-Education</option>
-              <option value="i.d-Fix">i.d-Fix</option>
-              <option value="i.d-Kafee">i.d-Kafee</option>
+              <option value="ID Algemeen">ID Algemeen</option>
+              <option value="ID Education">ID Education</option>
+              <option value="ID Kafee">ID Kafee</option>
+              <option value="IDE Business Fair">IDE Business Fair</option>
               <option value="IO Festival">IO Festival</option>
-              <option value="IO Bedrijvenbeurs">IO Bedrijvenbeurs</option>
-              <option value="Report-i.d">Report-i.d</option>
-              <option value="Lustrum">Lustrum</option>
-              <option value="Masterdisputen">Masterdisputen</option>
-              <option value="PR-i.d">PR-i.d</option>
-              <option value="ski.d">ski.d</option>
+              <option value="Master Summer Day">Master Summer Day</option>
+              <option value="Master Communities">Master Communities</option>
+              <option value="PRID">PRID</option>
+              <option value="ReportID">ReportID</option>
+              <option value="SkID">SkID</option>
               <option value="Spring Trip">Spring Trip</option>
               <option value="Summercue">Summercue</option>
               <option value="TOC">TOC</option>
-              <option value="TTP">TTP</option>
-              <option value="vidio">vidio</option>
+              <option value="Turn The Page">Turn The Page</option>
+              <option value="Vidio">Vidio</option>
             </datalist>
         </div>
 
@@ -192,7 +190,7 @@
     </main>
 
     <footer class="version">
-      Declarations v0.4.0
+      Declarations v0.5.0
     </footer>
 
   </body>
