move from datalist to select to prevent KeyErrors

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,34 +56,31 @@
 
         <div class="decl-form__rule">
           <label for="committee" class="decl-form__question">Voor welke commissie?</label>
-          <input name="committee" type="text" class="decl-form__answer"
-            placeholder="Spend ID"
-            list="committees">
-            <datalist id="committees">
-              <option value="ActID">ActID</option>
-              <option value="Cases on Tour 1">Cases on Tour 1</option>
-              <option value="Cases on Tour 2">Cases on Tour 2</option>
-              <option value="Eerstejaarscommissie">Eerstejaarscommissie</option>
-              <option value="Eerstejaarsweekend">Eerstejaarsweekend</option>
-              <option value="ExID">ExID</option>
-              <option value="Flight Case">Flight Case</option>
-              <option value="Foto">Foto</option>
-              <option value="ID Algemeen">ID Algemeen</option>
-              <option value="ID Education">ID Education</option>
-              <option value="ID Kafee">ID Kafee</option>
-              <option value="IDE Business Fair">IDE Business Fair</option>
-              <option value="IO Festival">IO Festival</option>
-              <option value="Master Summer Day">Master Summer Day</option>
-              <option value="Master Communities">Master Communities</option>
-              <option value="PRID">PRID</option>
-              <option value="ReportID">ReportID</option>
-              <option value="SkID">SkID</option>
-              <option value="Spring Trip">Spring Trip</option>
-              <option value="Summercue">Summercue</option>
-              <option value="TOC">TOC</option>
-              <option value="Turn The Page">Turn The Page</option>
-              <option value="Vidio">Vidio</option>
-            </datalist>
+          <select name="committee" class="decl-form__answer">
+            <option value="ActID">ActID</option>
+            <option value="Cases on Tour 1">Cases on Tour 1</option>
+            <option value="Cases on Tour 2">Cases on Tour 2</option>
+            <option value="Eerstejaarscommissie">Eerstejaarscommissie</option>
+            <option value="Eerstejaarsweekend">Eerstejaarsweekend</option>
+            <option value="ExID">ExID</option>
+            <option value="Flight Case">Flight Case</option>
+            <option value="Foto">Foto</option>
+            <option value="ID Algemeen">ID Algemeen</option>
+            <option value="ID Education">ID Education</option>
+            <option value="ID Kafee">ID Kafee</option>
+            <option value="IDE Business Fair">IDE Business Fair</option>
+            <option value="IO Festival">IO Festival</option>
+            <option value="Master Meetup Day">Master Meetup Day</option>
+            <option value="Master Communities">Master Communities</option>
+            <option value="PRID">PRID</option>
+            <option value="ReportID">ReportID</option>
+            <option value="SkID">SkID</option>
+            <option value="Spring Trip">Spring Trip</option>
+            <option value="Summercue">Summercue</option>
+            <option value="TOC">TOC</option>
+            <option value="Turn The Page">Turn The Page</option>
+            <option value="Vidio">Vidio</option>
+          </select>
         </div>
 
         <div class="decl-form__rule">
