--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="/static/css/styles.css">
-    <script
-      src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-      </script>
+    <script src="/static/js/jquery-3.5.1.min.js"></script>
     <script src="/static/js/js.cookie.js" async></script>
     <script src="/static/js/main.js" async></script>
 
